Fixing text spacing - anxious page

--- a/assets/common.css
+++ b/assets/common.css
@@ -66,6 +66,7 @@ body {
 
 a {
     color: black;
+    text-decoration: none;
 }
 
 a:hover {
@@ -111,10 +112,16 @@ h2 {
     text-decoration: underline;
     font-size: var(--body-copy);
     margin-top: 40px;
+    margin-bottom: 0px;
 }
 
 p {
     margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.title {
+    margin-top: 40px;
     margin-bottom: 0px;
 }
 
